Fix navbar collapse rounded corners.

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
 
 .navbar {
 	margin-bottom: 20px;
+	border-radius: 4px;
 }
 
 .disqus {
